First pages commit

--- a/NoCss.html
+++ b/NoCss.html
@@ -1,5 +1,5 @@
 <h1 id="empirical-equations-for-the-solow-model">Empirical equations for the Solow Model</h1>
-<h2 id="introduction">Introduction</h2>
+<h3 id="introduction">Introduction</h3>
 <p>I attempt to explain long run economic growth by looking at:</p>
 <ul>
 <li>capital accumulation</li>
@@ -13,15 +13,30 @@
 <li>About policies to promote growth</li>
 <li>About growth empirics: confronting the theory with facts</li>
 <li>Two simple models in which the rate of technological progress is endogenous</li>
+<li><ul>
+<li>So, poor countries grow faster than richer countries and can be seen from the below figure:</li>
+</ul></li>
 </ul>
+<div class="figure">
+<img src="http://www.puertorico-herald.org/images/Convergence/image1.gif" alt="Figure 1: Conditional convergence" />
+<p class="caption">Figure 1: Conditional convergence</p>
+</div>
 <hr />
 <h3 id="growth-empirics-balanced-growth">Growth empirics: Balanced growth</h3>
 <ul>
 <li>Solow model’s steady state equilibrium exhibits balanced growth</li>
 <li>Many variables grow at the same rate</li>
 <li>Solow model predicts Y/L and K/L grow at the same rate (g), so K/Y should be constant</li>
-<li>Solow model predicts real wage grows at same rate as Y/L, while real rental price is constant.</li>
+<li>Solow model predicts real wage grows at same rate as Y/L, while real rental price is constant.<br />
+</li>
+<li>And so the steady state capital per effective worker is :</li>
 </ul>
+<p><span class="math inline"><em>k</em><sup>*</sup> = (<em>s</em>/(<em>δ</em> + <em>n</em> + <em>g</em>))<sup>1/(1 − ∝)</sup></span></p>
+<p>See the figure below to see the steady state of capital:</p>
+<div class="figure">
+<img src="http://cruel.org/econthought/essays/growth/neoclass/image/solowconv1.gif" alt="Figue 2" />
+<p class="caption">Figue 2</p>
+</div>
 <hr />
 <h3 id="growth-empirics-convergence">Growth empirics: Convergence</h3>
 <ul>
@@ -51,7 +66,12 @@
 <ul>
 <li>We consider a time span of just one year which is technically feasible given that the underlying dataset provides annual data.</li>
 <li>Thus the growth of income is a function of the determinants of ultimate steady state and the initial level of income</li>
+<li>I present the Solow model in a graphical form and study how it explains how a country can be trapped when it cannot converge and this is the case in many African countries. See the figure below</li>
 </ul>
+<div class="figure">
+<img src="http://cruel.org/econthought/essays/growth/neoclass/image/solowtrap4.gif" alt="Figure 3" />
+<p class="caption">Figure 3</p>
+</div>
 <hr />
 <h3 id="growth-empirics-derive-the-regression-equation">Growth empirics: Derive the regression equation</h3>
 <ul>
