--- a/presentation.html
+++ b/presentation.html
@@ -10,27 +10,45 @@
 </head>
 <body>
 <h1 id="empirical-equations-for-the-solow-model">Empirical equations for the Solow Model</h1>
-<h2 id="introduction">Introduction</h2>
+<h3 id="introduction">Introduction</h3>
 <p>I attempt to explain long run economic growth by looking at:</p>
 <ul>
 <li>capital accumulation</li>
 <li>labor or population growth</li>
 <li>and increases in productivity (technological progress)</li>
 </ul>
+<hr />
 <h3 id="motivation">Motivation</h3>
 <ul>
 <li>How to incorporate technological progress in the Solow model</li>
 <li>About policies to promote growth</li>
 <li>About growth empirics: confronting the theory with facts</li>
 <li>Two simple models in which the rate of technological progress is endogenous</li>
+<li><ul>
+<li>So, poor countries grow faster than richer countries and can be seen from the below figure:</li>
+</ul></li>
 </ul>
+<div class="figure">
+<img src="http://www.puertorico-herald.org/images/Convergence/image1.gif" alt="Figure 1: Conditional convergence" />
+<p class="caption">Figure 1: Conditional convergence</p>
+</div>
+<hr />
 <h3 id="growth-empirics-balanced-growth">Growth empirics: Balanced growth</h3>
 <ul>
 <li>Solow model’s steady state equilibrium exhibits balanced growth</li>
 <li>Many variables grow at the same rate</li>
 <li>Solow model predicts Y/L and K/L grow at the same rate (g), so K/Y should be constant</li>
-<li>Solow model predicts real wage grows at same rate as Y/L, while real rental price is constant.</li>
+<li>Solow model predicts real wage grows at same rate as Y/L, while real rental price is constant.<br />
+</li>
+<li>And so the steady state capital per effective worker is :</li>
 </ul>
+<p><span class="math inline"><em>k</em><sup>*</sup> = (<em>s</em>/(<em>δ</em> + <em>n</em> + <em>g</em>))<sup>1/(1 − ∝)</sup></span></p>
+<p>See the figure below to see the steady state of capital:</p>
+<div class="figure">
+<img src="http://cruel.org/econthought/essays/growth/neoclass/image/solowconv1.gif" alt="Figue 2" />
+<p class="caption">Figue 2</p>
+</div>
+<hr />
 <h3 id="growth-empirics-convergence">Growth empirics: Convergence</h3>
 <ul>
 <li>Solow model predicts that, other things equal, “poor” countries (with lower Y/L and K/L) should grow faster than “rich” ones</li>
@@ -38,6 +56,7 @@
 </li>
 <li>In real world, many poor countries do NOT grow faster than rich ones. Does this mean the Solow model fails?</li>
 </ul>
+<hr />
 <h3 id="growth-empirics-convergence-1">Growth empirics: Convergence</h3>
 <ul>
 <li>Convergence in the Solow model is arrived at by taking a first order Taylor expansion of output around the steady state level gives :</li>
@@ -47,6 +66,7 @@
 <li>The Solow model suggests a natural regression to study the rate of convergence;</li>
 </ul>
 <p><span class="math inline"><em>l</em><em>n</em><em>y</em>(<em>t</em>)=(1 − <em>e</em><sup>−<em>λ</em><em>t</em></sup>)<em>l</em><em>n</em><em>y</em><sup>*</sup> + <em>e</em><sup>−<em>λ</em><em>t</em></sup><em>l</em><em>n</em><em>y</em>(0)</span></p>
+<hr />
 <h3 id="growth-empirics-convergence-2">Growth empirics: Convergence</h3>
 <ul>
 <li><p>Equation (E.2) can also be derived as above by subtracting lny(t-T) from both sides. T is an arbitrary log in order to get income per effective worker at some initial year</p></li>
@@ -57,7 +77,13 @@
 <ul>
 <li>We consider a time span of just one year which is technically feasible given that the underlying dataset provides annual data.</li>
 <li>Thus the growth of income is a function of the determinants of ultimate steady state and the initial level of income</li>
+<li>I present the Solow model in a graphical form and study how it explains how a country can be trapped when it cannot converge and this is the case in many African countries. See the figure below</li>
 </ul>
+<div class="figure">
+<img src="http://cruel.org/econthought/essays/growth/neoclass/image/solowtrap4.gif" alt="Figure 3" />
+<p class="caption">Figure 3</p>
+</div>
+<hr />
 <h3 id="growth-empirics-derive-the-regression-equation">Growth empirics: Derive the regression equation</h3>
 <ul>
 <li>The Solow model takes the rates of savings, population growth and technological progress as exogenous</li>
@@ -86,6 +112,7 @@ y = k^α And so : <span class="math inline"><em>y</em><sup>*</sup> = (<em>s<
 <ul>
 <li>Taking logs on both sides of the equation gives the linear specification: $ln(Y/L)^*=lnA(0) + gt-(∝+β)/(1-∝-β) ln(n+g+δ) + ∝/(1-∝-β) lns_K + β/(1-∝-β) lns_H $</li>
 </ul>
+<hr />
 <h3 id="growth-empirics-conclusion">Growth empirics: Conclusion</h3>
 <ul>
 <li>steady state growth rate of income per person depends solely on the exogenous rate of tech progress</li>
@@ -100,5 +127,6 @@ y = k^α And so : <span class="math inline"><em>y</em><sup>*</sup> = (<em>s<
 <li>Cross-country variation in living standards is due to differences in cap. accumulation and in production efficiency</li>
 </ul></li>
 </ul>
+<hr />
 </body>
 </html>
