First pages commit

--- a/NoCss.html
+++ b/NoCss.html
@@ -1,10 +1,11 @@
-<h1 id="empirical-equations-for-the-solow-model">Empirical equations for the Solow Model</h1>
+<p>Name: Yusuf Hassan Haji ANR:180541 Empirical equations for the Solow Model =======</p>
 <h3 id="introduction">Introduction</h3>
 <p>I attempt to explain long run economic growth by looking at:</p>
 <ul>
 <li>capital accumulation</li>
 <li>labor or population growth</li>
 <li>and increases in productivity (technological progress)</li>
+<li>Check my assignment 2 for further explanation: <a href="http://yusufhaji.github.io/assignment2/" class="uri" title="Assignment 2 link">http://yusufhaji.github.io/assignment2/</a></li>
 </ul>
 <hr />
 <h3 id="motivation">Motivation</h3>
