--- a/presentation.html
+++ b/presentation.html
@@ -21,7 +21,6 @@
   <!--[if lt IE 9]>
   <script src="reveal.js/lib/js/html5shiv.js"></script>
   <![endif]-->
-  <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 </head>
 <body>
   <div class="reveal">
@@ -29,138 +28,39 @@
 
 <section id="TOC">
 <ul>
+<li><a href="#/name-yusuf-hassan-haji-anr180541">Name: Yusuf Hassan Haji ANR:180541</a></li>
 <li><a href="#/empirical-equations-for-the-solow-model">Empirical equations for the Solow Model</a></li>
+<li><a href="#/introduction">Introduction</a></li>
+<li><a href="#/motivation">Motivation</a></li>
+<li><a href="#/growth-empirics-balanced-growth">Growth empirics: Balanced growth</a></li>
+<li><a href="#/growth-empirics-convergence">Growth empirics: Convergence</a></li>
+<li><a href="#/growth-empirics-convergence-1">Growth empirics: Convergence</a></li>
+<li><a href="#/growth-empirics-convergence-2">Growth empirics: Convergence</a></li>
+<li><a href="#/growth-empirics-derive-the-regression-equation">Growth empirics: Derive the regression equation</a></li>
 </ul>
 </section>
 
-<section class="slide level2">
-
-<p>Name: Yusuf Hassan Haji ANR:180541</p>
-</section>
-<section><section id="empirical-equations-for-the-solow-model" class="titleslide slide level1"><h1>Empirical equations for the Solow Model</h1></section><h3 id="introduction">Introduction</h3>
-<p>I attempt to explain long run economic growth by looking at:</p>
-<ul>
-<li>capital accumulation</li>
-<li>labor or population growth</li>
-<li>and increases in productivity (technological progress)</li>
-<li>Check my assignment 2 for further explanation: <a href="http://yusufhaji.github.io/assignment2/" class="uri" title="Assignment 2 link">http://yusufhaji.github.io/assignment2/</a></li>
-</ul><section class="slide level2">
-
-<h3 id="motivation">Motivation</h3>
-<ul>
-<li>How to incorporate technological progress in the Solow model</li>
-<li>About policies to promote growth</li>
-<li>About growth empirics: confronting the theory with facts</li>
-<li>Two simple models in which the rate of technological progress is endogenous</li>
-<li><ul>
-<li>So, poor countries grow faster than richer countries and can be seen from the below figure:</li>
-</ul></li>
-</ul>
-<figure>
-<img src="http://www.puertorico-herald.org/images/Convergence/image1.gif" alt="Figure 1: Conditional convergence" /><figcaption>Figure 1: Conditional convergence</figcaption>
-</figure>
-</section><section class="slide level2">
-
-<h3 id="growth-empirics-balanced-growth">Growth empirics: Balanced growth</h3>
-<ul>
-<li>Solow model’s steady state equilibrium exhibits balanced growth</li>
-<li>Many variables grow at the same rate</li>
-<li>Solow model predicts Y/L and K/L grow at the same rate (g), so K/Y should be constant</li>
-<li>Solow model predicts real wage grows at same rate as Y/L, while real rental price is constant.<br />
-</li>
-<li>And so the steady state capital per effective worker is :</li>
-</ul>
-<p><span class="math inline">\(k^*=(s/(δ+n+g))^{1/(1-∝)}\)</span></p>
-<p>See the figure below to see the steady state of capital:</p>
-<figure>
-<img src="http://cruel.org/econthought/essays/growth/neoclass/image/solowconv1.gif" alt="Figue 2" /><figcaption>Figue 2</figcaption>
-</figure>
-</section><section class="slide level2">
-
-<h3 id="growth-empirics-convergence">Growth empirics: Convergence</h3>
-<ul>
-<li>Solow model predicts that, other things equal, “poor” countries (with lower Y/L and K/L) should grow faster than “rich” ones</li>
-<li>If true, then the income gap between rich &amp; poor countries would shrink over time, causing living standards to “converge.”<br />
-</li>
-<li>In real world, many poor countries do NOT grow faster than rich ones. Does this mean the Solow model fails?</li>
-</ul>
-</section><section class="slide level2">
-
-<h3 id="growth-empirics-convergence-1">Growth empirics: Convergence</h3>
-<ul>
-<li>Convergence in the Solow model is arrived at by taking a first order Taylor expansion of output around the steady state level gives :</li>
-</ul>
-<p><span class="math inline">\((d[lny(t)-lny^*])/dt=-λ[lny(t)-lny^*]\)</span></p>
-<ul>
-<li>The Solow model suggests a natural regression to study the rate of convergence;</li>
-</ul>
-<p><span class="math inline">\(lny(t)= (1-e^{-λt} ) lny^*+ e^{-λt} lny(0)\)</span></p>
-</section><section class="slide level2">
-
-<h3 id="growth-empirics-convergence-2">Growth empirics: Convergence</h3>
-<ul>
-<li><p>Equation (E.2) can also be derived as above by subtracting lny(t-T) from both sides. T is an arbitrary log in order to get income per effective worker at some initial year</p></li>
-<li><p>Equation (E.1) can therefore become;</p></li>
-</ul>
-<p><span class="math inline">\(lny(t)- lny(t-T) = lny^* - (e^{-λt} ) lny^*- lny(t-T)+ e^(-λt) lny(t-T)\)</span></p>
-<p><span class="math inline">\(lny(t)- lny(t-T)=(1-e^{-λt} ) lny^* - (1-e^{-λt}) lny(t-T)\)</span></p>
-<ul>
-<li>We consider a time span of just one year which is technically feasible given that the underlying dataset provides annual data.</li>
-<li>Thus the growth of income is a function of the determinants of ultimate steady state and the initial level of income</li>
-<li>I present the Solow model in a graphical form and study how it explains how a country can be trapped when it cannot converge and this is the case in many African countries. See the figure below</li>
-</ul>
-<figure>
-<img src="http://cruel.org/econthought/essays/growth/neoclass/image/solowtrap4.gif" alt="Figure 3" /><figcaption>Figure 3</figcaption>
-</figure>
-</section><section class="slide level2">
-
-<h3 id="growth-empirics-derive-the-regression-equation">Growth empirics: Derive the regression equation</h3>
-<ul>
-<li>The Solow model takes the rates of savings, population growth and technological progress as exogenous</li>
-<li>A Cobb-Douglas production function is assumed , so production at time t is given by;</li>
-</ul>
-<p><span class="math inline">\(Y(t) = K(t)^α (A(t)L(t))^{1-α} ,0&lt;α&lt;1\)</span></p>
-<p>L and A are assumed to be exogenous at rates n and g∶ <span class="math inline">\(L(t) = L(0) e^{nt}\)</span></p>
-<p><span class="math inline">\(A(t)= A(0) e^{gt}\)</span></p>
-<ul>
-<li><p>But the central-predictions of the Solow model concern the impact of saving and population growth on real income and so we can derive the steady state output per effective worker : y* Since :<br />
-y = k^α And so : <span class="math inline">\(y^* = (s/(δ+n+g))^{∝/(1-∝)}\)</span></p></li>
-<li>Mankiw Romer and Weil (1992) assume that: lnA(0) = a + ε where a is a constant and ε is a country-specific shock (e.g., climate, social capital and property rights). The constant a is assumed to be identical across countries</li>
-<li><p>Using lnA(0) = a + ε and normalizing t=0 and thus taking log of income per capita we get the basic regression equation:</p></li>
-</ul>
-<p><span class="math inline">\(ln(Y/L) = lnA(0) + gt+∝/(1-∝) lns- ∝/(1-∝) ln(n+g+δ) + ε\)</span></p>
-<ul>
-<li>The production function in intensive form is :</li>
-</ul>
-<p><span class="math inline">\(y= k^∝ h^β\)</span></p>
-<p>Savings:</p>
-<p><span class="math inline">\(s ≡ s_K+s_H\)</span> * In steady state k ̇= 0 and k ̇= h= 0 and so</p>
-<p><span class="math inline">\(k^* = ((s_K^(1-β) s_H^β)/(δ+n+g))^{1/(1-∝-β)}\)</span> and</p>
-<p><span class="math inline">\(h^* = ((s_K^∝ s_H^{(1-∝)})/(δ+n+g))^{1/(1-∝-β)}\)</span></p>
-<p>So <span class="math inline">\(y = k^∝ h^β\)</span> becomes; <span class="math inline">\(y^*=((s_K^(1-β) s_H^β)/(δ+n+g))^{∝/(1-∝-β)} ((s_K^∝ s_H^{1-∝})/(δ+n+g))^{β/(1-∝-β)}\)</span> * And simplifies to be:</p>
-<p><span class="math inline">\(((Y(t))/(L(t)))^*=A(0).e^gt=A_0 e^gt (((s_K^α s_H^β ))/(δ+n+g)^{1/(∝+β)} )^{(α+β)/(1-∝-β)}\)</span></p>
-<ul>
-<li>Taking logs on both sides of the equation gives the linear specification: $ln(Y/L)^*=lnA(0) + gt-(∝+β)/(1-∝-β) ln(n+g+δ) + ∝/(1-∝-β) lns_K + β/(1-∝-β) lns_H $</li>
-</ul>
-</section><section class="slide level2">
-
-<h3 id="growth-empirics-conclusion">Growth empirics: Conclusion</h3>
-<ul>
-<li>steady state growth rate of income per person depends solely on the exogenous rate of tech progress</li>
-<li>Ways to increase the saving rate
-<ul>
-<li>increase public saving (reduce budget deficit)</li>
-<li>tax incentives for private saving</li>
-</ul></li>
-<li>Empirical studies
-<ul>
-<li>Solow model explains balanced growth, conditional convergence</li>
-<li>Cross-country variation in living standards is due to differences in cap. accumulation and in production efficiency</li>
-</ul></li>
-</ul>
-</section><section class="slide level2">
+<section><section id="name-yusuf-hassan-haji-anr180541" class="titleslide slide level1"><h1>Name: Yusuf Hassan Haji ANR:180541</h1></section></section>
+<section><section id="empirical-equations-for-the-solow-model" class="titleslide slide level1"><h1>Empirical equations for the Solow Model</h1></section></section>
+<section><section id="introduction" class="titleslide slide level1"><h1>Introduction</h1></section><section class="slide level2">
 
 </section></section>
+<section><section id="motivation" class="titleslide slide level1"><h1>Motivation</h1></section><section class="slide level2">
+
+</section></section>
+<section><section id="growth-empirics-balanced-growth" class="titleslide slide level1"><h1>Growth empirics: Balanced growth</h1></section><section class="slide level2">
+
+</section></section>
+<section><section id="growth-empirics-convergence" class="titleslide slide level1"><h1>Growth empirics: Convergence</h1></section><section class="slide level2">
+
+</section></section>
+<section><section id="growth-empirics-convergence-1" class="titleslide slide level1"><h1>Growth empirics: Convergence</h1></section><section class="slide level2">
+
+</section></section>
+<section><section id="growth-empirics-convergence-2" class="titleslide slide level1"><h1>Growth empirics: Convergence</h1></section><section class="slide level2">
+
+</section></section>
+<section><section id="growth-empirics-derive-the-regression-equation" class="titleslide slide level1"><h1>Growth empirics: Derive the regression equation</h1></section></section>
     </div>
   </div>
 
