First pages commit

--- a/presentation.html
+++ b/presentation.html
@@ -97,7 +97,7 @@
 <h1>Growth empirics: Convergence</h1>
 <ul>
 <li><p>Equation (E.2) can also be derived as above by subtracting lny(t-T) from both sides. T is an arbitrary log in order to get income per effective worker at some initial year</p></li>
-<li><p>Equation (E.1) can therefore become;</p></li>
+<li><p>Equation (E.1) can therefore become:</p></li>
 </ul>
 <p><span class="math inline">\(lny(t)- lny(t-T) = lny^* - (e^{-λt} ) lny^*- lny(t-T)+ e^(-λt) lny(t-T)\)</span></p>
 <p><span class="math inline">\(lny(t)- lny(t-T)=(1-e^{-λt} ) lny^* - (1-e^{-λt}) lny(t-T)\)</span></p>
@@ -113,7 +113,7 @@
 <h1>Growth empirics: Derive the regression equation</h1>
 <ul>
 <li>The Solow model takes the rates of savings, population growth and technological progress as exogenous</li>
-<li>A Cobb-Douglas production function is assumed , so production at time t is given by;</li>
+<li>A Cobb-Douglas production function is assumed , so production at time t is given by:</li>
 </ul>
 <p><span class="math inline">\(Y(t) = K(t)^α (A(t)L(t))^{1-α} ,0&lt;α&lt;1\)</span></p>
 <p>L and A are assumed to be exogenous at rates n and g∶ <span class="math inline">\(L(t) = L(0) e^{nt}\)</span></p>
