First pages commit

--- a/presentation.html
+++ b/presentation.html
@@ -38,7 +38,7 @@
 <p>Name: Yusuf Hassan Haji ANR:180541</p>
 </section>
 <section><section id="empirical-equations-for-the-solow-model" class="titleslide slide level1"><h1>Empirical equations for the Solow Model</h1></section><section id="introduction" class="slide level2">
-<h1>Introduction</h1>
+<h1>###Introduction</h1>
 <p>I attempt to explain long run economic growth by looking at:</p>
 <ul>
 <li>capital accumulation</li>
@@ -47,7 +47,7 @@
 <li>Check my assignment 2 for further explanation: <a href="http://yusufhaji.github.io/assignment2/" class="uri" title="Assignment 2 link">http://yusufhaji.github.io/assignment2/</a></li>
 </ul>
 </section><section id="motivation" class="slide level2">
-<h1>Motivation</h1>
+<h1>###Motivation</h1>
 <ul>
 <li>How to incorporate technological progress in the Solow model</li>
 <li>About policies to promote growth</li>
@@ -61,7 +61,7 @@
 <img src="http://www.puertorico-herald.org/images/Convergence/image1.gif" alt="Figure 1: Conditional convergence" /><figcaption>Figure 1: Conditional convergence</figcaption>
 </figure>
 </section><section id="growth-empirics-balanced-growth" class="slide level2">
-<h1>Growth empirics: Balanced growth</h1>
+<h1>###Growth empirics: Balanced growth</h1>
 <ul>
 <li>Solow model’s steady state equilibrium exhibits balanced growth</li>
 <li>Many variables grow at the same rate</li>
@@ -76,7 +76,7 @@
 <img src="http://cruel.org/econthought/essays/growth/neoclass/image/solowconv1.gif" alt="Figue 2" /><figcaption>Figue 2</figcaption>
 </figure>
 </section><section id="growth-empirics-convergence" class="slide level2">
-<h1>Growth empirics: Convergence</h1>
+<h1>###Growth empirics: Convergence</h1>
 <ul>
 <li>Solow model predicts that, other things equal, “poor” countries (with lower Y/L and K/L) should grow faster than “rich” ones</li>
 <li>If true, then the income gap between rich &amp; poor countries would shrink over time, causing living standards to “converge.”<br />
@@ -84,7 +84,7 @@
 <li>In real world, many poor countries do NOT grow faster than rich ones. Does this mean the Solow model fails?</li>
 </ul>
 </section><section id="growth-empirics-convergence-1" class="slide level2">
-<h1>Growth empirics: Convergence</h1>
+<h1>###Growth empirics: Convergence</h1>
 <ul>
 <li>Convergence in the Solow model is arrived at by taking a first order Taylor expansion of output around the steady state level gives :</li>
 </ul>
@@ -94,7 +94,7 @@
 </ul>
 <p><span class="math inline">\(lny(t)= (1-e^{-λt} ) lny^*+ e^{-λt} lny(0)\)</span></p>
 </section><section id="growth-empirics-convergence-2" class="slide level2">
-<h1>Growth empirics: Convergence</h1>
+<h1>###Growth empirics: Convergence</h1>
 <ul>
 <li><p>Equation (E.2) can also be derived as above by subtracting lny(t-T) from both sides. T is an arbitrary log in order to get income per effective worker at some initial year</p></li>
 <li><p>Equation (E.1) can therefore become:</p></li>
@@ -110,7 +110,7 @@
 <img src="http://cruel.org/econthought/essays/growth/neoclass/image/solowtrap4.gif" alt="Figure 3" /><figcaption>Figure 3</figcaption>
 </figure>
 </section><section id="growth-empirics-derive-the-regression-equation" class="slide level2">
-<h1>Growth empirics: Derive the regression equation</h1>
+<h1>###Growth empirics: Derive the regression equation</h1>
 <ul>
 <li>The Solow model takes the rates of savings, population growth and technological progress as exogenous</li>
 <li>A Cobb-Douglas production function is assumed , so production at time t is given by:</li>
@@ -144,7 +144,7 @@ y = k^α And so : <span class="math inline">\(y^* = (s/(δ+n+g))^{∝/(1-∝)}\)
 </colgroup>
 <thead>
 <tr class="header">
-<th style="text-align: left;">Growth empirics: Conclusion</th>
+<th style="text-align: left;">###Growth empirics: Conclusion</th>
 </tr>
 </thead>
 <tbody>
