First pages commit

--- a/presentation.html
+++ b/presentation.html
@@ -27,18 +27,16 @@
   <div class="reveal">
     <div class="slides">
 
-<section id="TOC">
-<ul>
-<li><a href="#/empirical-equations-for-the-solow-model">Empirical equations for the Solow Model</a></li>
-</ul>
-</section>
 
-<section class="slide level2">
-
-<p>Name: Yusuf Hassan Haji ANR:180541</p>
+<section id="empirics-of-the-solow-model" class="slide level2">
+<h1>Empirics of the Solow model</h1>
 </section>
-<section><section id="empirical-equations-for-the-solow-model" class="titleslide slide level1"><h1>Empirical equations for the Solow Model</h1></section><section id="introduction" class="slide level2">
-<h1>###Introduction</h1>
+<section id="yusuf-hassan-haji" class="slide level2">
+<h1>Yusuf Hassan Haji</h1>
+<h3 id="tilburg-university">Tilburg University</h3>
+</section>
+<section id="introduction" class="slide level2">
+<h1>Introduction</h1>
 <p>I attempt to explain long run economic growth by looking at:</p>
 <ul>
 <li>capital accumulation</li>
@@ -46,22 +44,19 @@
 <li>and increases in productivity (technological progress)</li>
 <li>Check my assignment 2 for further explanation: <a href="http://yusufhaji.github.io/assignment2/" class="uri" title="Assignment 2 link">http://yusufhaji.github.io/assignment2/</a></li>
 </ul>
-</section><section id="motivation" class="slide level2">
-<h1>###Motivation</h1>
+</section>
+<section id="motivation" class="slide level2">
+<h1>Motivation</h1>
 <ul>
 <li>How to incorporate technological progress in the Solow model</li>
 <li>About policies to promote growth</li>
 <li>About growth empirics: confronting the theory with facts</li>
 <li>Two simple models in which the rate of technological progress is endogenous</li>
-<li><ul>
-<li>So, poor countries grow faster than richer countries and can be seen from the below figure:</li>
-</ul></li>
+<li>So, poor countries grow faster than richer countries and can be seen from the below figure: <img src="http://www.puertorico-herald.org/images/Convergence/image1.gif" alt="Figure 1: Conditional convergence" /> ------------------------------------------------------------</li>
 </ul>
-<figure>
-<img src="http://www.puertorico-herald.org/images/Convergence/image1.gif" alt="Figure 1: Conditional convergence" /><figcaption>Figure 1: Conditional convergence</figcaption>
-</figure>
-</section><section id="growth-empirics-balanced-growth" class="slide level2">
-<h1>###Growth empirics: Balanced growth</h1>
+</section>
+<section id="growth-empirics-balanced-growth" class="slide level2">
+<h1>Growth empirics: Balanced growth</h1>
 <ul>
 <li>Solow model’s steady state equilibrium exhibits balanced growth</li>
 <li>Many variables grow at the same rate</li>
@@ -75,16 +70,18 @@
 <figure>
 <img src="http://cruel.org/econthought/essays/growth/neoclass/image/solowconv1.gif" alt="Figue 2" /><figcaption>Figue 2</figcaption>
 </figure>
-</section><section id="growth-empirics-convergence" class="slide level2">
-<h1>###Growth empirics: Convergence</h1>
+</section>
+<section id="growth-empirics-convergence" class="slide level2">
+<h1>Growth empirics: Convergence</h1>
 <ul>
 <li>Solow model predicts that, other things equal, “poor” countries (with lower Y/L and K/L) should grow faster than “rich” ones</li>
 <li>If true, then the income gap between rich &amp; poor countries would shrink over time, causing living standards to “converge.”<br />
 </li>
-<li>In real world, many poor countries do NOT grow faster than rich ones. Does this mean the Solow model fails?</li>
+<li><h2 id="in-real-world-many-poor-countries-do-not-grow-faster-than-rich-ones.-does-this-mean-the-solow-model-fails">In real world, many poor countries do not grow faster than rich ones. Does this mean the Solow model fails?</h2></li>
 </ul>
-</section><section id="growth-empirics-convergence-1" class="slide level2">
-<h1>###Growth empirics: Convergence</h1>
+</section>
+<section id="growth-empirics-convergence-1" class="slide level2">
+<h1>Growth empirics: Convergence</h1>
 <ul>
 <li>Convergence in the Solow model is arrived at by taking a first order Taylor expansion of output around the steady state level gives :</li>
 </ul>
@@ -93,8 +90,9 @@
 <li>The Solow model suggests a natural regression to study the rate of convergence;</li>
 </ul>
 <p><span class="math inline">\(lny(t)= (1-e^{-λt} ) lny^*+ e^{-λt} lny(0)\)</span></p>
-</section><section id="growth-empirics-convergence-2" class="slide level2">
-<h1>###Growth empirics: Convergence</h1>
+</section>
+<section id="growth-empirics-convergence-2" class="slide level2">
+<h1>Growth empirics: Convergence</h1>
 <ul>
 <li><p>Equation (E.2) can also be derived as above by subtracting lny(t-T) from both sides. T is an arbitrary log in order to get income per effective worker at some initial year</p></li>
 <li><p>Equation (E.1) can therefore become:</p></li>
@@ -109,8 +107,9 @@
 <figure>
 <img src="http://cruel.org/econthought/essays/growth/neoclass/image/solowtrap4.gif" alt="Figure 3" /><figcaption>Figure 3</figcaption>
 </figure>
-</section><section id="growth-empirics-derive-the-regression-equation" class="slide level2">
-<h1>###Growth empirics: Derive the regression equation</h1>
+</section>
+<section id="growth-empirics-derive-the-regression-equation" class="slide level2">
+<h1>Growth empirics: Derive the regression equation</h1>
 <ul>
 <li>The Solow model takes the rates of savings, population growth and technological progress as exogenous</li>
 <li>A Cobb-Douglas production function is assumed , so production at time t is given by:</li>
@@ -138,22 +137,26 @@ y = k^α And so : <span class="math inline">\(y^* = (s/(δ+n+g))^{∝/(1-∝)}\)
 <ul>
 <li>Taking logs on both sides of the equation gives the linear specification: $ln(Y/L)^*=lnA(0) + gt-(∝+β)/(1-∝-β) ln(n+g+δ) + ∝/(1-∝-β) lns_K + β/(1-∝-β) lns_H $</li>
 </ul>
-<table style="width:74%;">
-<colgroup>
-<col style="width: 73%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th style="text-align: left;">###Growth empirics: Conclusion</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td style="text-align: left;">* steady state growth rate of income per person depends solely on the exogenous rate of tech progress * Ways to increase the saving rate * increase public saving (reduce budget deficit) * tax incentives for private saving * Empirical studies * Solow model explains balanced growth, conditional convergence * Cross-country variation in living standards is due to differences in cap. accumulation and in production efficiency</td>
-</tr>
-</tbody>
-</table>
-</section></section>
+</section>
+<section id="growth-empirics-conclusion" class="slide level2">
+<h1>Growth empirics: Conclusion</h1>
+<ul>
+<li>steady state growth rate of income per person depends solely on the exogenous rate of tech progress</li>
+<li>Ways to increase the saving rate
+<ul>
+<li>increase public saving (reduce budget deficit)</li>
+<li>tax incentives for private saving</li>
+</ul></li>
+<li>Empirical studies
+<ul>
+<li>Solow model explains balanced growth, conditional convergence</li>
+<li>Cross-country variation in living standards is due to differences in cap. accumulation and in production efficiency</li>
+</ul></li>
+</ul>
+</section>
+<section class="slide level2">
+
+</section>
     </div>
   </div>
 
