--- a/presentation.html
+++ b/presentation.html
@@ -42,8 +42,9 @@
 <li>capital accumulation</li>
 <li>labor or population growth</li>
 <li>and increases in productivity (technological progress)</li>
-<li>Check my assignment 2 for further explanation: <a href="http://yusufhaji.github.io/assignment2/" class="uri" title="Assignment 2 link">http://yusufhaji.github.io/assignment2/</a></li>
+<li>Check my assignment 2 for further explanation:</li>
 </ul>
+<p><a href="http://yusufhaji.github.io/assignment2/" class="uri" title="Assignment 2 link">http://yusufhaji.github.io/assignment2/</a></p>
 </section>
 <section id="motivation" class="slide level2">
 <h1>Motivation</h1>
@@ -52,7 +53,8 @@
 <li>About policies to promote growth</li>
 <li>About growth empirics: confronting the theory with facts</li>
 <li>Two simple models in which the rate of technological progress is endogenous</li>
-<li>So, poor countries grow faster than richer countries and can be seen from the below figure: <img src="http://www.puertorico-herald.org/images/Convergence/image1.gif" alt="Figure 1: Conditional convergence" /> ------------------------------------------------------------</li>
+<li>So, poor countries grow faster than richer countries and can be seen from the below figure:</li>
+<li><img src="http://www.puertorico-herald.org/images/Convergence/image1.gif" title="fig:" alt="Figure 1: Conditional convergence" /></li>
 </ul>
 </section>
 <section id="growth-empirics-balanced-growth" class="slide level2">
@@ -77,7 +79,8 @@
 <li>Solow model predicts that, other things equal, “poor” countries (with lower Y/L and K/L) should grow faster than “rich” ones</li>
 <li>If true, then the income gap between rich &amp; poor countries would shrink over time, causing living standards to “converge.”<br />
 </li>
-<li><h2 id="in-real-world-many-poor-countries-do-not-grow-faster-than-rich-ones.-does-this-mean-the-solow-model-fails">In real world, many poor countries do not grow faster than rich ones. Does this mean the Solow model fails?</h2></li>
+<li>In real world, many poor countries do not grow faster than rich ones</li>
+<li><h2 id="does-this-mean-the-solow-model-fails">Does this mean the Solow model fails?</h2></li>
 </ul>
 </section>
 <section id="growth-empirics-convergence-1" class="slide level2">
