First pages commit

--- a/presentation.htm
+++ b/presentation.htm
@@ -62,7 +62,7 @@
 <section><section id="long-run-growth-convergence" class="titleslide slide level1"><h1>Long run growth &amp; Convergence</h1></section><section id="balanced-growth" class="slide level2">
 <h1>Balanced growth</h1>
 <ul>
-<li>The steady state capital per effective worker is written and shown as below: <span class="math inline">\(k^*=(s/(δ+n+g))^{1/(1-∝)}\)</span> <img src="http://cruel.org/econthought/essays/growth/neoclass/image/solowconv1.gif" alt="Figue 2" /></li>
+<li>And so the steady state capital per effective worker is : <span class="math inline">\(k^*=(s/(δ+n+g))^{1/(1-∝)}\)</span> See the figure below: <img src="http://cruel.org/econthought/essays/growth/neoclass/image/solowconv1.gif" alt="Figue 2" /></li>
 </ul>
 </section><section id="convergence-1" class="slide level2">
 <h1>Convergence (1)</h1>
@@ -92,7 +92,7 @@
 </section><section id="convergence-4" class="slide level2">
 <h1>Convergence (4)</h1>
 <ul>
-<li>I present the Solow model and show when a country cannot converge. See the figure below <img src="http://cruel.org/econthought/essays/growth/neoclass/image/solowtrap4.gif" alt="Figure 3" /></li>
+<li>I present the Solow model in a graphical form and study how it explains how a country can be trapped when it cannot converge and this is the case in many African countries. See the figure below <img src="http://cruel.org/econthought/essays/growth/neoclass/image/solowtrap4.gif" alt="Figure 3" /></li>
 </ul>
 </section><section class="slide level2">
 
@@ -104,37 +104,40 @@
 <li>A Cobb-Douglas production function is assumed , so production at time t is given by:</li>
 </ul>
 <p><span class="math inline">\(Y(t) = K(t)^α (A(t)L(t))^{1-α} ,0&lt;α&lt;1\)</span></p>
-<p>L and A are assumed to be exogenous at rates n and g∶ <span class="math inline">\(L(t) = L(0) e^{nt}\)</span> and <span class="math inline">\(A(t)= A(0) e^{gt}\)</span></p>
+<p>L and A are assumed to be exogenous at rates n and g∶ <span class="math inline">\(L(t) = L(0) e^{nt}\)</span></p>
+</section><section id="at-a0-egt" class="slide level2">
+<h1><span class="math inline">\(A(t)= A(0) e^{gt}\)</span></h1>
 </section><section id="the-regression-equation-2" class="slide level2">
 <h1>The regression equation (2)</h1>
 <ul>
 <li>But the central-predictions of the Solow model concern the impact of saving and population growth on real income and so we can derive the steady state output per effective worker : y* Since :<br />
-<span class="math inline">\(y = k^α\)</span> And so : <span class="math inline">\(y^* = (s/(δ+n+g))^{∝/(1-∝)}\)</span></li>
-</ul>
-</section><section id="the-regression-equation-3" class="slide level2">
-<h1>The regression equation (3)</h1>
-<ul>
+y = k^α And so : <span class="math inline">\(y^* = (s/(δ+n+g))^{∝/(1-∝)}\)</span> ----------------------------------- The regression equation (3) -----------------------------------------------------------------</li>
 <li>Mankiw Romer and Weil (1992) assume that: lnA(0) = a + ε where a is a constant and ε is a country-specific shock (e.g., climate, social capital and property rights). The constant a is assumed to be identical across countries</li>
-<li>Using lnA(0) = a + ε and normalizing t=0 and thus taking log of income per capita we get the basic regression equation: <span class="math inline">\(ln(Y/L) = lnA(0) + gt+∝/(1-∝) lns- ∝/(1-∝) ln(n+g+δ) + ε\)</span></li>
+<li>Using lnA(0) = a + ε and normalizing t=0 and thus taking log of income per capita we get the basic regression equation:</li>
 </ul>
+</section><section id="lnyl-lna0-gt1--lns--1--lnngδ-ε" class="slide level2">
+<h1><span class="math inline">\(ln(Y/L) = lnA(0) + gt+∝/(1-∝) lns- ∝/(1-∝) ln(n+g+δ) + ε\)</span></h1>
 </section><section id="the-regression-equation-4" class="slide level2">
 <h1>The regression equation (4)</h1>
 <ul>
 <li>The production function in intensive form is :</li>
 </ul>
-<p><span class="math inline">\(y= k^∝ h^β\)</span> Savings: <span class="math inline">\(s ≡ s_K+s_H\)</span> and * In steady state k ̇= 0 and k ̇= h= 0 and so</p>
-<p><span class="math inline">\(k^* = ((s_K^(1-β) s_H^β)/(δ+n+g))^{1/(1-∝-β)}\)</span> and</p>
-<p><span class="math inline">\(h^* = ((s_K^∝ s_H^{(1-∝)})/(δ+n+g))^{1/(1-∝-β)}\)</span></p>
-</section><section id="the-regression-equation-5" class="slide level2">
-<h1>The regression equation (5)</h1>
-<p>So <span class="math inline">\(y = k^∝ h^β\)</span> becomes; <span class="math inline">\(y^*=((s_K^(1-β) s_H^β)/(δ+n+g))^{∝/(1-∝-β)} ((s_K^∝ s_H^{1-∝})/(δ+n+g))^{β/(1-∝-β)}\)</span></p>
+<p><span class="math inline">\(y= k^∝ h^β\)</span></p>
+<p>Savings:</p>
+<p><span class="math inline">\(s ≡ s_K+s_H\)</span> * In steady state k ̇= 0 and k ̇= h= 0 and so</p>
+<p><span class="math inline">\(k^* = ((s_K^(1-β) s_H^β)/(δ+n+g))^{1/(1-∝-β)}\)</span> and<br />
+<span class="math inline">\(h^* = ((s_K^∝ s_H^{(1-∝)})/(δ+n+g))^{1/(1-∝-β)}\)</span></p>
+<table>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">The regression equation (5)</td>
+</tr>
+</tbody>
+</table>
+<p>So <span class="math inline">\(y = k^∝ h^β\)</span> becomes; <span class="math inline">\(y^*=((s_K^(1-β) s_H^β)/(δ+n+g))^{∝/(1-∝-β)} ((s_K^∝ s_H^{1-∝})/(δ+n+g))^{β/(1-∝-β)}\)</span> * And simplifies to be:</p>
+<p><span class="math inline">\(((Y(t))/(L(t)))^*=A(0).e^gt=A_0 e^gt (((s_K^α s_H^β ))/(δ+n+g)^{1/(∝+β)} )^{(α+β)/(1-∝-β)}\)</span></p>
 <ul>
-<li>And simplifies to be: <span class="math inline">\(((Y(t))/(L(t)))^*=A(0).e^gt=A_0 e^gt (((s_K^α s_H^β ))/(δ+n+g)^{1/(∝+β)} )^{(α+β)/(1-∝-β)}\)</span></li>
-</ul>
-</section><section id="the-regression-equation-6" class="slide level2">
-<h1>The regression equation (6)</h1>
-<ul>
-<li>Taking logs on both sides of the equation gives the linear specification: <span class="math inline">\(ln(Y/L)^{*}=lnA(0) + gt-{(∝+β)/(1-∝-β)} ln(n+g+δ) + {∝/(1-∝-β)} lns_K +  {β/(1-∝-β)} lns_H\)</span></li>
+<li>Taking logs on both sides of the equation gives the linear specification: $ln(Y/L)^*=lnA(0) + gt-(∝+β)/(1-∝-β) ln(n+g+δ) + ∝/(1-∝-β) lns_K + β/(1-∝-β) lns_H $</li>
 </ul>
 </section><section class="slide level2">
 
