First pages commit

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <li><a href="#/introduction">Introduction</a></li>
 <li><a href="#/long-run-growth-convergence">Long run growth &amp; Convergence</a></li>
 <li><a href="#/growth-empirics">Growth empirics</a></li>
-<li><a href="#/conclusion">Conclusion</a></li>
+<li><a href="#/summary">Summary</a></li>
 </ul>
 </section>
 
@@ -87,7 +87,7 @@
 <h1>Convergence (3)</h1>
 <ul>
 <li><p>Equation (E.2) can also be derived as above by subtracting lny(t-T) from both sides. T is an arbitrary log in order to get income per effective worker at some initial year</p></li>
-<li><p>Equation (E.1) can therefore become: <span class="math inline">\(lny(t)- lny(t-T) = lny^* - (e^{-λt} ) lny^*- lny(t-T)+ e^(-λt) lny(t-T)\)</span> <span class="math inline">\(lny(t)- lny(t-T)=(1-e^{-λt} ) lny^* - (1-e^{-λt}) lny(t-T)\)</span></p></li>
+<li><p>Equation (E.1) can therefore become: <span class="math inline">\(lny(t)- lny(t-T) = lny^* - (e^{-λt} ) lny^*- lny(t-T)+ e^{-λt} lny(t-T)\)</span> <span class="math inline">\(lny(t)- lny(t-T)=(1-e^{-λt} ) lny^* - (1-e^{-λt}) lny(t-T)\)</span></p></li>
 </ul>
 </section><section id="convergence-4" class="slide level2">
 <h1>Convergence (4)</h1>
@@ -139,8 +139,8 @@
 </section><section class="slide level2">
 
 </section></section>
-<section><section id="conclusion" class="titleslide slide level1"><h1>Conclusion</h1></section><section id="conclusions" class="slide level2">
-<h1>Conclusions</h1>
+<section><section id="summary" class="titleslide slide level1"><h1>Summary</h1></section><section id="conclusion" class="slide level2">
+<h1>Conclusion</h1>
 <ul>
 <li>steady state growth rate of income per person depends solely on the exogenous rate of tech progress</li>
 <li>Ways to increase the saving rate
